--- a/package.json
+++ b/package.json
@@ -1,27 +1,22 @@
 {
-  "name": "server",
+  "name": "server_firbird",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Roman Oliynyk",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "axios": "^0.21.1",
+    "express": "^4.16.0",
+    "node-fetch": "^2.6.1",
+    "node-firebird": "^0.9.9"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TinGoll/ServerYug.git"
-  },
-  "bugs": {
-    "url": "https://github.com/TinGoll/ServerYug/issues"
-  },
-  "homepage": "https://github.com/TinGoll/ServerYug#readme",
-  "description": ""
+    "nodemon": "^2.0.7"
+  }
 }
