--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.13",
     "axios": "^0.21.1",
     "express": "^4.16.0",
     "node-fetch": "^2.6.1",
