--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "date-format-parse": "^0.2.7",
     "express": "^4.16.0",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
+    "materialize-css": "^1.0.0-rc.2",
     "node-fetch": "^2.6.1",
     "node-firebird": "^0.9.9"
   },
