--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "materialize-css": "^1.0.0-rc.2",
     "node-fetch": "^2.6.1",
     "node-firebird": "^0.9.9",
-    "node-firebird-driver-native": "^2.3.0"
+    "node-firebird-driver-native": "^2.3.0",
+    "node-pre-gyp-github": "^1.4.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.12",
