--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/body-parser": "^1.19.1",
     "@types/express": "^4.17.13",
     "@types/express-validator": "^3.0.0",
-    "@types/jsonwebtoken": "^8.5.5",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/lodash": "^4.14.176",
     "@types/node": "^16.11.6",
     "@types/uuid": "^8.3.1",
@@ -30,9 +30,7 @@
     "lodash": "^4.17.21",
     "materialize-css": "^1.0.0-rc.2",
     "node-fetch": "^2.6.1",
-    "node-firebird": "^0.9.9",
-    "node-firebird-driver-native": "^2.3.0",
-    "node-pre-gyp-github": "^1.4.3"
+    "node-firebird": "^0.9.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.12",
