--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jsonwebtoken": "^8.5.6",
     "@types/lodash": "^4.14.176",
     "@types/node": "^16.11.6",
+    "@types/p-queue": "^3.2.1",
     "@types/uuid": "^8.3.1",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
@@ -30,7 +31,8 @@
     "lodash": "^4.17.21",
     "materialize-css": "^1.0.0-rc.2",
     "node-fetch": "^2.6.1",
-    "node-firebird": "^0.9.9"
+    "node-firebird": "^0.9.9",
+    "p-queue": "^6.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12",
