--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "server_firbird",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon index.ts",
@@ -12,29 +12,34 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/body-parser": "^1.19.1",
-    "@types/express": "^4.17.13",
-    "@types/express-validator": "^3.0.0",
-    "@types/jsonwebtoken": "^8.5.6",
-    "@types/lodash": "^4.14.176",
-    "@types/node": "^16.11.6",
-    "@types/p-queue": "^3.2.1",
-    "@types/uuid": "^8.3.1",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "date-format-parse": "^0.2.7",
     "express": "^4.16.0",
     "express-validator": "^6.12.1",
+    "express-ws": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "materialize-css": "^1.0.0-rc.2",
     "node-fetch": "^2.6.1",
     "node-firebird": "^0.9.9",
-    "p-queue": "^6.6.2"
+    "node-firebird-driver-native": "^2.4.0",
+    "p-queue": "^6.6.2",
+    "yug-entity-system": "^1.0.35"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/body-parser": "^1.19.1",
+    "@types/express": "^4.17.13",
+    "@types/express-validator": "^3.0.0",
+    "@types/express-ws": "^3.0.1",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/lodash": "^4.14.176",
+    "@types/node": "^16.11.6",
+    "@types/p-queue": "^3.2.1",
+    "@types/uuid": "^8.3.1",
+    "@types/ws": "^8.2.2",
     "nodemon": "^2.0.12",
     "typescript": "^4.4.4"
   }
