--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "node-firebird": "^0.9.9",
     "node-firebird-driver-native": "^2.4.0",
     "p-queue": "^6.6.2",
-    "yug-entity-system": "^1.3.6"
+    "yug-entity-system-async": "^2.0.71"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -40,7 +40,7 @@
     "@types/p-queue": "^3.2.1",
     "@types/uuid": "^8.3.1",
     "@types/ws": "^8.2.2",
-    "nodemon": "^2.0.12",
+    "nodemon": "^1.3.3",
     "typescript": "^4.4.4"
   }
 }
