--- a/package.json
+++ b/package.json
@@ -18,15 +18,12 @@
     "date-format-parse": "^0.2.7",
     "express": "^4.16.0",
     "express-validator": "^6.12.1",
-    "express-ws": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "materialize-css": "^1.0.0-rc.2",
     "node-fetch": "^2.6.1",
     "node-firebird": "^0.9.9",
-    "node-firebird-driver-native": "^2.4.0",
-    "p-queue": "^6.6.2",
-    "yug-entity-system-async": "^2.0.93"
+    "p-queue": "^6.6.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
